--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,13 +41,13 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=100MB
 #mysql
 #spring.datasource.url=jdbc:mysql://112.74.200.82:3306/hneb_jxetyy?characterEncoding=UTF-8&useOldAliasMetadataBehavior=true&autoReconnect=true&serverTimezone=UTC
-spring.datasource.url=jdbc:mysql://8.129.212.169:3306/shu?autoReconnect=true&useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://8.129.212.169:3306/shu?autoReconnect=true&useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
 spring.datasource.username=hkr
 spring.datasource.password=mysql@cloud2020
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 #config sys
-net.hneb.deptname=\u6c5f\u897f\u7701\u513f\u7ae5\u533b\u9662
-net.hneb.lbNme=\u6301\u7eed\u6ce8\u610f\u529b\u6d4b\u8bd5
+net.hneb.deptname=\u6C5F\u897F\u7701\u513F\u7AE5\u533B\u9662
+net.hneb.lbNme=\u6301\u7EED\u6CE8\u610F\u529B\u6D4B\u8BD5
 #\u65E5\u5FD7
 logging.level.net.hneb.jxetyy.dao=debug
