--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -40,10 +40,9 @@ pagehelper.page-size-zero=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=100MB
 #mysql
-#spring.datasource.url=jdbc:mysql://112.74.200.82:3306/hneb_jxetyy?characterEncoding=UTF-8&useOldAliasMetadataBehavior=true&autoReconnect=true&serverTimezone=UTC
-spring.datasource.url=jdbc:mysql://8.129.212.169:3306/shu?autoReconnect=true&useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
-spring.datasource.username=hkr
-spring.datasource.password=mysql@cloud2020
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/cpt?autoReconnect=true&useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai
+spring.datasource.username=hneb
+spring.datasource.password=cpt@hneb2020
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 #config sys
