--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
         <net.sf.dozer>5.5.1</net.sf.dozer>
         <com.alibaba.fastjson>1.2.70</com.alibaba.fastjson>
         <jquery-i18n-properties>1.2.7</jquery-i18n-properties>
+        <org.apache.httpcomponents>4.5.7</org.apache.httpcomponents>
     </properties>
 
     <dependencies>
@@ -79,6 +80,11 @@
             <groupId>net.sf.dozer</groupId>
             <artifactId>dozer</artifactId>
             <version>${net.sf.dozer}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>${org.apache.httpcomponents}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
