--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,6 +46,17 @@ spring.datasource.username=hkr
 spring.datasource.password=mysql@cloud2020
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
+#http client
+http.maxTotal=50
+http.defaultMaxPerRoute=30
+#\u8BBE\u7F6E\u8FDE\u63A5\u8D85\u65F6\u65F6\u95F4\uFF0C\u5355\u4F4D\u6BEB\u79D2
+http.connectTimeout=10000
+#http clilent\u4E2D\u4ECEconnetcion pool\u4E2D\u83B7\u5F97\u4E00\u4E2Aconnection\u7684\u8D85\u65F6\u65F6\u95F4,\u5355\u4F4D\u6BEB\u79D2
+http.connectionRequestTimeout=500
+#\u8BF7\u6C42\u83B7\u53D6\u6570\u636E\u7684\u8D85\u65F6\u65F6\u95F4\uFF0C\u5355\u4F4D\u6BEB\u79D2\u3002 \u5982\u679C\u8BBF\u95EE\u4E00\u4E2A\u63A5\u53E3\uFF0C\u591A\u5C11\u65F6\u95F4\u5185\u65E0\u6CD5\u8FD4\u56DE\u6570\u636E\uFF0C\u5C31\u76F4\u63A5\u653E\u5F03\u6B64\u6B21\u8C03\u7528
+http.socketTimeout=15000
+http.validateAfterInactivity=2000
+http.staleConnectionCheckEnabled=true
 #config sys
 net.hneb.deptname=\u6C5F\u897F\u7701\u513F\u7AE5\u533B\u9662
 net.hneb.lbNme=\u6301\u7EED\u6CE8\u610F\u529B\u6D4B\u8BD5
